longform og image

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
   <meta name="twitter:title" content="Learning D3">
   <meta name="twitter:description" content="Build data visualizations on your own terms">
   <meta name="twitter:url" content="https://learningd3.com">
-  <meta name="twitter:image" content="./assets/og.png">
+  <meta name="twitter:image" content="https://learningd3.com/assets/og.png">
 
   <meta property="og:title" content="Learning D3">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://learningd3.com">
-  <meta property="og:image:secure_url" content="./assets/og.png">
+  <meta property="og:image:secure_url" content="https://learningd3.com/assets/og.png">
 
   <link rel="icon" type="image/png" href="./assets/favicon.png">
   <link href="https://unpkg.com/basscss@8.0.2/css/basscss.min.css" rel="stylesheet">
