--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </div>
       </div>
     </div>
-    <div class="homepage-red">
+    <div>
       <div class="max-width-3 sm-p4 p2 mx-auto">
         <div>
           <div class="h2 sm-h1 pt2 md-pt4 bold">Data visualization on your terms</div>
@@ -206,7 +206,7 @@
               </p>
 
               <div class="col col-12 lg-col-8">
-                <div class="text-yellow flex mb2 mt3">
+                <div class="text-yellow flex mb3 mt3">
                   <svg class="homepage-icon mr2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                     stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-check-square">
                     <polyline points="9 11 12 14 22 4"></polyline>
@@ -215,7 +215,7 @@
                   
                   <div class="h3 sm-h2 lg-h1 bold">One Time Payment</div>
                 </div>
-                <div class="text-red flex mb2">
+                <div class="text-red flex mb3">
                   <svg class="homepage-icon mr2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
                     stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                     class="feather feather-check-square">
@@ -226,7 +226,7 @@
                   <div class="h3 sm-h2 lg-h1 bold">Source Files Included</div>
                 </div>
                 <div class="text-blue flex">
-                  <svg class="homepage-icon mr2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
+                  <svg class="homepage-icon mr2 mb4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
                     stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                     class="feather feather-check-square">
                     <polyline points="9 11 12 14 22 4"></polyline>
@@ -237,7 +237,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col col-12 lg-col-4 mt3 lg-mt0 center">
+              <div class="col col-12 lg-col-4 mt3 lg-mt2 center">
                 <h2 class="text-strikethrough m0 p0">$200</h2>
                 <div>
                   <h1 class="text-price mt0 mb1 p0 text-white"><span class="text-price-dollar">$</span>99</h1>
